my mp0 assignment

--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,23 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MP 0</title>
+  <title>My Card</title>
+  <link rel="stylesheet" href="./main.css">
 </head>
 
 <body>
-  <h1>Hello World!</h1>
-  <img src="assets/image.jpg" />
-
-  <script src="bundle.js" type="text/javascript"></script>
+  <main class="page">
+    <section class="card">
+      <img src="./assets/me.jpg" alt="My photo" class="avatar" width="150" height="150">
+      <h1 class="name">Tanisha Singh</h1>
+      <p class="bio">
+        I am pursuing a Master’s in Information Management at the University of Illinois Urbana-Champaign. Before graduate school, I worked for three years as a Data Engineer, focusing on SQL, data modeling, and business intelligence. My goal is to use data to answer practical questions and support better decisions.
+      </p>
+      <a class="link" href="https://github.com/tanisha1311" target="_blank" rel="noreferrer">Visit my GitHub</a>
+    </section>
+  </main>
 </body>
 
 </html>
+
+<script src="./bundle.js"></script>
