--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Card</title>
+  <title>MP0-Tanisha Singh</title>
   <link rel="stylesheet" href="./main.css">
 </head>
 
